tests/paczka2/big_fuzzy/89605197.err
Error in line 24: oDUMQz A790 151,2
Error in line 34: 5RijCOOHkV A790 19,2
Error in line 33: A625 A790 1,8
Error in line 36: 3WjC A790 184,3
Error in line 45: 5RijCOOHkV A790 51,4
Error in line 53: iAQw A790 0,8
Error in line 58: 3bwpKJfM11 A790 83,02
Error in line 43: 3WjC A324 72,5
Error in line 56: 3bwpKJfM11 A625 96,4
Error in line 60: eBtVtk A625 17,6
Error in line 72: 3WjC A625 22,1
Error in line 82: oDUMQz A625 17,6
Error in line 90: oDUMQz A205 45,4
Error in line 94: oDUMQz A324 30,2
Error in line 100: oDUMQz A790 5,C
Error in line 99: oDUMQz A790 31,6
Error in line 104: eBtVtk A625 48,5
Error in line 108: eBtVtk A205 95,9
Error in line 111: 3bwpKJfM11 A324 17,4
Error in line 106: oDUMQz A625 74,4
Error in line 117: oDUMQz A205 77,1
Error in line 107: 3WjC A625 29,1
Error in line 118: oDUMQz A625 33,8
Error in line 136: 3WjC A205 33,9
Error in line 138: iAQw A625 7,3
Error in line 149: A625 A205 37,2
Error in line 148: iAQw A324 25,2
Error in line 152: A625 A625 11,3
Error in line 155: eBtVtk A205 79,2
Error in line 167: 5RijCOOHkV A625 61,1
Error in line 166: eBtVtk A790 7,3
Error in line 165: 3WjC A625 86,0
Error in line 181: oDUMQz A790 34,0
Error in line 184: eBtVtk A625 70,1
Error in line 191: A625 A205 78,0
Error in line 201: 3bwpKJfM11 A625 15,4
Error in line 205: oDUMQz A324 65,96
Error in line 186: 3WjC A324 21,7
Error in line 199: A625 A625 60,9
Error in line 215: 5RijCOOHkV A625 99,1
Error in line 226: A625 A790 -2,9
Error in line 221: oDUMQz A324 159,4
Error in line 227: 5RijCOOHkV A625 45,0
Error in line 231: A625 A790 313,1
Error in line 232: oDUMQz A205 75,3
Error in line 228: 3bwpKJfM11 A205 62,8
Error in line 235: 5RijCOOHkV A324 91,2
Error in line 236: A625 A324 53,2
Error in line 240: 5RijCOOHkV A205 90,7
